Реализовал метод decide в BktStrategy